# variadic_future

./: .codecov.yml  .gitignore  .lgtm.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  appveyor.yml  classaom_1_1Basic__future-members.html  classaom_1_1Basic__future.html  classaom_1_1Basic__promise-members.html  classaom_1_1Basic__promise.html  classaom_1_1Basic__stream__future-members.html  classaom_1_1Basic__stream__future.html  classaom_1_1Basic__stream__promise-members.html  classaom_1_1Basic__stream__promise.html  classaom_1_1Future-members.html  classaom_1_1Future.html  classaom_1_1Promise-members.html  classaom_1_1Promise.html  classes.html  config_8h.html  config_8h_source.html  dir_a329de27cb72c1791a7e55f456c14846.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  future_8h.html  future_8h_source.html  hierarchy.html  index.html  menudata.js  stream__future_8h.html  stream__future_8h_source.html  structaom_1_1Unfullfilled__promise-members.html  structaom_1_1Unfullfilled__promise.html  tests.cpp  (+2 more)
.circleci/: config.yml
benchmarks/: CMakeLists.txt  vs_std_future.cpp
cmake/: CodeCoverage.cmake  var_futures-config.cmake.in
examples/: CMakeLists.txt
examples/asio/: main.cpp
include/nonstd/: expected.hpp
include/var_future/: config.h  future.h  stream_future.h
include/var_future/impl/: async.h  future.h  join.h  promise.h  storage_decl.h  storage_impl.h  then.h  then_expect.h  then_finally_expect.h  tie.h  utils.h
include/var_future/impl/stream/: foreach_handler.h  stream_future.h  stream_promise.h  stream_storage_decl.h  stream_storage_impl.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js
tests/: CMakeLists.txt  allocator.cpp  async.cpp  doctest.h  future_of_reference.cpp  int.cpp  join.cpp  misc.cpp  stream.cpp  void.cpp
